--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         RSS Feed
     </title>
     <script
-        src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"
+        src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"
         type="text/javascript"
     ></script>
     <script
-        src="http://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"
+        src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"
         type="text/javascript"
     ></script>
 </head>
